--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^10.7.5",
+    "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "konva": "^10.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-konva": "^19.0.10",
     "react-scripts": "5.0.1",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
